# ros2-edouard

./: .gitignore
bags/test1/: metadata.yaml  test1_0.mcap
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
src/my_cpp_first/: CMakeLists.txt  package.xml
src/my_cpp_first/src/: a.out  my_first_cpp.cpp  robot_news_pub.cpp  test  test.cpp
src/my_py_first/: package.xml  setup.cfg  setup.py
src/my_py_first/my_py_first/: add_client.py  add_service.py  battery.py  hardware_status_pub.py  hardware_status_sub.py  light_set.py  light_set_sub.py  my_first_py.py  number_counter.py  number_pub.py  py_publisher.py  py_subscriber.py  rectangle_area_client.py  rectangle_area_service.py  spawn_turtle.py
src/my_robot_bringup/: CMakeLists.txt  package.xml
src/my_robot_bringup/config/: number_app.yaml
src/my_robot_bringup/launch/: first_pub_sub.launch.xml  project_turtlesim.launch.xml  radio_station.launch.xml
src/my_robot_interfaces/: CMakeLists.txt  package.xml
src/my_robot_interfaces/msg/: HardwareStatus.msg
src/my_robot_interfaces/srv/: BatteryStatus.srv
src/robot_movement/: package.xml  setup.cfg  setup.py
src/robot_movement/robot_movement/: movement_manager.py  movement_pub.py  movement_sub.py  obstacle_detection.py
